[improve][build] Upgrade Mockito to 5.17.0 and byte-buddy to 1.15.11 (#24241)
(cherry picked from commit 83dea9ed0d5362f9064d5e2089b95f906b22198b)
(cherry picked from commit 0e7d9678ffa5d01df9ae0b586a022bcb7c295c36)